@@ -3,10 +3,8 @@ package com.presence.testpresence.services;
 import com.google.gson.Gson;
 import com.presence.testpresence.model.entities.Companie;
 import com.presence.testpresence.model.entities.Employee;
-import com.presence.testpresence.model.entities.Machine;
 import com.presence.testpresence.model.repositories.EmployeeRepository;
 import com.presence.testpresence.ws.EmployeeWs;
-import com.presence.testpresence.ws.MachineWs;
 import com.presence.testpresence.ws.ReponseWs;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -14,6 +12,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class EmployeeService {
@@ -39,7 +38,7 @@ public class EmployeeService {
     public ReponseWs listEmployeeOfCompany(Companie companie){
         Gson gson = new Gson();
         List<Employee> employees = employeeRepository.findByCompanie(companie);
-        List<EmployeeWs> employeesWs = employees.stream().map(m -> gson.fromJson(gson.toJson(m), EmployeeWs.class)).toList();
+        List<EmployeeWs> employeesWs = employees.stream().map(m -> gson.fromJson(gson.toJson(m), EmployeeWs.class)).collect(Collectors.toList());
         return new ReponseWs("success", "list", 200, employeesWs);
     }
 
